--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -3,3 +3,5 @@
 @import './theme.scss';
 @import './mixin.scss';
 @import './typography.scss';
+@import './button.scss';
+@import './breakpoint.scss';
