--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -1,5 +1,7 @@
 :root {
     --primary_color: #B08EAD;
-    --header_font_color: #4B3049;
+    --primary_font_color: #4B3049;
+    --secondary-font-color: #795376;
     --white: #FFF;
+    --black: #000;
   }
